Address SonarQube - 1